# opengl-sandbox

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: staging.cmake
docs/: Basics - Cameras.md  (+7 more)
modules/spr/spr/: CMakeLists.txt  Context.cpp  Context.h  FixedFunctionState.h  FrameDataManager.cpp  FrameDataManager.h  Handles.h  MathTypes.h  SimpleRenderer.cpp  SimpleRenderer.h  Utils.cpp  Utils.h
modules/spr/spr/OpenGL/: Helpers.h  RendererContextGL.cpp  RendererContextGL.h
modules/spr/spr/OpenGL/ResourceManager/: FramebufferManagerGL.cpp  FramebufferManagerGL.h  FramebufferUtilsGL.cpp  FramebufferUtilsGL.h  IndexBufferManagerGL.cpp  IndexBufferManagerGL.h  ProgramManagerGL.cpp  ProgramManagerGL.h  ProgramUtilsGL.cpp  ProgramUtilsGL.h  ResourceManagerGL.cpp  ResourceManagerGL.h  ShaderManagerGL.cpp  ShaderManagerGL.h  TextureManagerGL.cpp  TextureManagerGL.h  TextureUtilsGL.cpp  TextureUtilsGL.h  UniformManagerGL.cpp  UniformManagerGL.h  VertexBufferManagerGL.cpp  VertexBufferManagerGL.h
modules/spr/spr/ResourceManager/: FramebufferAttachmentType.h  ResourceManager.cpp  ResourceManager.h  SamplerInfo.cpp  SamplerInfo.h  TextureInfo.h  UniformManager.cpp  UniformManager.h  UniformType.h  VertexAttributeLayout.cpp  VertexAttributeLayout.h
src/: CMakeLists.txt  main.cpp
src/examples/02-triangle/: vbo.cpp
src/examples/03-shaders/: shader_with_uniform.cpp
src/examples/05-transforms/: transform.cpp
src/examples/06-mvp/: mvp.cpp
src/examples/07-camera/: camera.cpp
src/examples/09-phong/: phong_view.cpp
src/examples/10-material/: material.cpp
src/examples/11-specular map/: emission_map.cpp
src/examples/12-light sources/: multiple.cpp  spotlight.cpp
src/examples/13-meshes/: grid.cpp
src/examples/advancedogl/: 01_DepthBuffers.cpp  01_DepthBuffers.h  01_Framebuffers.cpp  01_Framebuffers.h  01_StencilBuffers.cpp  01_StencilBuffers.h  02_Blending.cpp  02_Blending.h  03_Antialiasing.cpp  03_Antialiasing.h  04_Instancing.cpp  04_Instancing.h  05_GeometryShading.cpp  05_GeometryShading.h  06_Tessellation.cpp  06_Tessellation.h  07_Compute.cpp  07_Compute.h
src/examples/learnopengl/: 01_Window.h  02_EBO.cpp  02_EBO.h  02_VAO.cpp  02_VAO.h  02_VBO.cpp  02_VBO.h  03_Shaders.cpp  03_Shaders.h  04_Textures.cpp  04_Textures.h  05_Transform.cpp  05_Transform.h  06_MVP.cpp  06_MVP.h  07_Camera.cpp  07_Camera.h  08_Lighting.cpp  08_Lighting.h  09_Phong.cpp  09_Phong.h  10_Material.cpp  10_Material.h  11_Emission_Map.cpp  11_Emission_Map.h  11_Specular_Map.cpp  11_Specular_Map.h  12_DirectionalLight.cpp  12_DirectionalLight.h  12_MultipleLights.cpp  12_MultipleLights.h  12_PointLight.cpp  12_PointLight.h  12_SpotLight.cpp  12_SpotLight.h  13_Meshes.cpp  13_Meshes.h
src/examples/simplerenderer/: 01_StencilWithRenderer.cpp  01_StencilWithRenderer.h  01_Stenciling.cpp  01_Stenciling.h  02_OrderIndependentBlending.cpp  02_OrderIndependentBlending.h  03_Instancing.cpp  03_Instancing.h  04_HDR.cpp  04_HDR.h  05_Bloom.cpp  05_Bloom.h  06_TextRendering.cpp  06_TextRendering.h
src/shaders/: 01_aogl_color_buffers.frag  01_aogl_depth_buffers.frag  01_aogl_depth_buffers.vert  01_aogl_stencil_buffers_sdf.frag  02_frag_in.frag  02_vertex_invert.vert  02_vertex_offset.vert  02_vertex_out.vert  03_frag_tex.frag  03_frag_tex_inv.frag  03_vertex_tex.vert  04_aogl_instanced.frag  04_aogl_instanced.vert  04_vertex_transform.vert  05_vertex_mvp.vert  06_aogl_tess.control  06_aogl_tess.eval  06_frag_basic_lighting.frag  06_frag_light_source.frag  07_phong.frag  07_phong.vert  07_phong_view.frag  07_phong_view.vert  08_material.frag  09_emission_map.frag  09_specular_map.frag  09_specular_map.vert  10_directional_light.frag  10_point_light.frag  10_spotlight.frag  11_multiple_lights.frag  12_default.frag  default_lit.frag  default_lit.vert  default_unlit.frag  default_unlit.vert  default_vertex.vert  draw_textured_quad.frag  example_compute.comp  font_ttf.frag  (+55 more)
src/shared/: Camera.cpp  Camera.h  Event.h  FreeCameraController.cpp  FreeCameraController.h  GlUtils.cpp  GlUtils.h  Layer.h  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelLoader.cpp  ModelLoader.h  Primitive.h  RenderUtils.cpp  RenderUtils.h  Runtime.cpp  Runtime.h  Shader.cpp  Shader.h  SimpleRenderer.cpp  SimpleRenderer.h  Texture2D.cpp  Texture2D.h  Utils.cpp  Utils.h  Window.cpp  Window.h
src/shared/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
src/shared/layers/: CameraLayer.cpp  CameraLayer.h  ExampleGUILayer.cpp  ExampleGUILayer.h  Layer.cpp  Layer.h  SandboxLayer.cpp  SandboxLayer.h
src/shared/renderer/: Context.cpp  Context.h  FrameDataManager.cpp  FrameDataManager.h  Handles.h  IndexBuffer.cpp  IndexBuffer.h  Inputs.cpp  Inputs.h  Programs.cpp  Programs.h  Runtime.cpp  Runtime.h  SimpleRenderer.cpp  SimpleRenderer.h  Uniforms.cpp  Uniforms.h  Utils.cpp  Utils.h  VertexAttributeLayout.cpp  VertexAttributeLayout.h  VertexBuffer.cpp  VertexBuffer.h
src/shared/renderer/OpenGL/: Helpers.cpp  Renderer.cpp  Renderer.h  RendererContext.cpp  RendererContext.h  RendererContextGL.cpp  RendererContextGL.h
src/shared/renderer/OpenGL/ResourceManager/: IndexBufferManagerGL.h  ProgramManagerGL.cpp  ProgramManagerGL.h  ResourceManagerGL.cpp  ResourceManagerGL.h  ShaderManagerGL.cpp  ShaderManagerGL.h  TextureManagerGL.h  TextureUtilsGL.cpp  TextureUtilsGL.h  UniformManagerGL.cpp  UniformManagerGL.h  VertexBufferManagerGL.cpp  VertexBufferManagerGL.h
src/shared/renderer/ResourceManager/: ResourceManager.cpp  ResourceManager.h  SamplerInfo.h  ShaderType.h  TextureInfo.h  UniformManager.cpp  UniformManager.h  UniformType.h  VertexAttributeLayout.cpp  VertexAttributeLayout.h
src/snippets/01-window/: window.cpp
src/snippets/02-triangle/: ebo.cpp  vao_2_shaders.cpp  vao_2_triangles.cpp  vbo.cpp  vbo_2_triangles.cpp
src/snippets/04-textures/: textures.cpp
src/snippets/08-basic lighting/: lighting.cpp
src/snippets/09-phong/: phong.cpp
src/snippets/11-specular map/: emission_map.cpp  specular_map.cpp
src/snippets/12-light sources/: directional.cpp  point.cpp  spotlight.cpp
(+33 files in other folders)
